# minecraft-agent-builder

./: .gitignore  README.md  exp.json  mats.json  patch.json  prev.json  prev2.json  ref.json  undo.json  val.json
.omo/run-continuation/: ses_0fd71dbc1ffeY0rcveIpXL6tSk.json
.tmp_cdp/: cdp.js  fatal.txt  phase1.js  report.json  run1.js
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: config.py  materials.py  projects.py
backend/app/core/: paths.py
backend/app/data/: blocks.json
backend/app/domain/: __init__.py  blueprint.py  create_project.py  frontend.py  materials.py  project.py  user_config.py  validation.py  workflow.py
backend/app/schemas/: __init__.py  project_api.py
backend/app/services/: __init__.py  blueprint_expander.py  config_service.py  exporter.py  geometry.py  litematica.py  material_planner.py  material_repository.py  merger.py  nbt_writer.py  persistence.py  project_runtime.py  sample_project.py  sample_project_blueprints.py  sample_project_spec.py  singletons.py  validator.py
backend/app/store/: agent_prompts.json  config.json  mods.json
backend/tests/: test_config_api.py  test_create_project.py  test_litematica_export.py  test_material_planner.py  test_merger.py  test_mod_paintable.py  test_project_api.py  test_project_commands_api.py  test_validator.py
docs/: frontend-design.md  plan.md
frontend/: harness.cjs  index.html  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: BottomBar.tsx  EditPanel.tsx  TopBar.tsx  (+9 more)
uishots/: snapshot.json
(+7 files in other folders)
